# talk2web

./: Dockerfile  README.md  dependencies.sh  pyproject.toml  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml
talk2web/: __init__.py  conversation.py  loaders.py  settings.py  vector_store.py
